--- a/iron-flex-layout.html
+++ b/iron-flex-layout.html
@@ -61,36 +61,48 @@ A complete [guide](https://elements.polymer-project.org/guides/flex-layout) to `
         display: inline-flex;
       };
 
-      --layout-horizontal: {
-        @apply --layout;
-
+      --layout-direction-row: {
         -ms-flex-direction: row;
         -webkit-flex-direction: row;
         flex-direction: row;
       };
 
-      --layout-horizontal-reverse: {
+      --layout-horizontal: {
         @apply --layout;
+        @apply --layout-direction-row;
+      };
 
+      --layout-direction-row-reverse: {
         -ms-flex-direction: row-reverse;
         -webkit-flex-direction: row-reverse;
         flex-direction: row-reverse;
       };
 
-      --layout-vertical: {
+      --layout-horizontal-reverse: {
         @apply --layout;
+        @apply --layout-direction-row-reverse;
+      };
 
+      --layout-direction-column: {
         -ms-flex-direction: column;
         -webkit-flex-direction: column;
         flex-direction: column;
       };
 
-      --layout-vertical-reverse: {
+      --layout-vertical: {
         @apply --layout;
+        @apply --layout-direction-column;
+      };
 
+      --layout-direction-column-reverse: {
         -ms-flex-direction: column-reverse;
         -webkit-flex-direction: column-reverse;
         flex-direction: column-reverse;
+      };
+
+      --layout-vertical-reverse: {
+        @apply --layout;
+        @apply --layout-direction-column-reverse;
       };
 
       --layout-wrap: {
